apps/test-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: test-ingress
spec:
  selector:
    app: echo
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5678
