apps/test-ingress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: test-ingress
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-system
  hostnames:
    - ingress.student-service.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo
          port: 80
